// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Hero Component > snapshot testing > should match snapshot for centered variant 1`] = `
<div>
  <section
    class="relative overflow-hidden bg-gradient-to-br from-white to-gray-50 py-20 px-6"
  >
    <div
      class="max-w-6xl mx-auto"
    >
      <div
        class="text-center max-w-4xl mx-auto"
      >
        <h1
          class="text-5xl md:text-7xl font-bold mb-6 bg-gradient-to-r from-gray-900 to-gray-600 bg-clip-text text-transparent"
        >
          Snapshot Test
        </h1>
        <p
          class="text-xl md:text-2xl text-gray-600 mb-8 leading-relaxed"
        >
          Testing snapshot
        </p>
        <a
          class="inline-block px-8 py-4 text-lg font-semibold text-white rounded-full transition-all hover:scale-105 hover:shadow-xl"
          href="#"
          style="background-color: rgb(16, 185, 129);"
        >
          Click
        </a>
      </div>
    </div>
  </section>
</div>
`;

exports[`Hero Component > snapshot testing > should match snapshot for full-screen variant 1`] = `
<div>
  <section
    class="relative h-screen flex items-center justify-center overflow-hidden"
    style="background-color: rgb(59, 130, 246);"
  >
    <div
      class="absolute inset-0 opacity-10"
    >
      <div
        class="absolute inset-0 bg-gradient-to-br from-black to-transparent"
      />
    </div>
    <div
      class="relative z-10 text-center max-w-5xl mx-auto px-6"
    >
      <h1
        class="text-6xl md:text-8xl font-black mb-8 text-white leading-tight tracking-tight"
      >
        Snapshot Test
      </h1>
      <p
        class="text-2xl md:text-3xl text-white/90 mb-12 font-medium"
      >
        Testing snapshot
      </p>
      <a
        class="inline-block px-12 py-6 text-xl font-bold text-gray-900 bg-white rounded-none hover:bg-gray-100 transition-all transform hover:scale-105 uppercase tracking-wider"
        href="#"
      >
        Click
      </a>
    </div>
  </section>
</div>
`;
